# oop_exercise_08

./: CMakeLists.txt  eight_angles.cpp  eight_angles.h  factory.cpp  factory.h  figure.h  five_angles.cpp  five_angles.h  main.cpp  point.h  processor.cpp  processor.h  report8-new.doc  report8.doc  six_angles.cpp  six_angles.h  subscriber.h
